syntax = "proto3";

package auth_service;

option go_package = "gen/go/authpb";

message RegisterRequest {
  string email = 1;
  string password = 2;
}

message RegisterResponse { string user_id = 1; }

message LoginRequest {
  string email = 1;
  string password = 2;
}

message LoginResponse {
  string access_token = 1;
  string refresh_token = 2;
  int64 access_token_expires = 3;
  int64 refresh_token_expires = 4;
}

message RefreshRequest { string refresh_token = 1; }

message RefreshResponse {
  string access_token = 1;
  string refresh_token = 2;
  int64 access_token_expires = 3;
  int64 refresh_token_expires = 4;
}

message ValidateRequest { string access_token = 1; }

message ValidateResponse {
  string user_id = 1;
  bool valid = 2;
}

service AuthService {
  rpc Register(RegisterRequest) returns (RegisterResponse);
  rpc Login(LoginRequest) returns (LoginResponse);
  rpc Refresh(RefreshRequest) returns (RefreshResponse);
  rpc Validate(ValidateRequest) returns (ValidateResponse);
}